<resources>
    <string name="app_name">israel road</string>
    <string name="login">Login</string>
    <string name="Username">User name</string>
    <string name="password">Password </string>
    <string name="signUp">SignUp </string>
    <string name="name">name </string>
    <string name="welcome"> welcome %1$s </string>
    <string name="mainHeadLine"> Israel_Road</string>

    <string name="UserType">enter user type angel/traveler </string>
    <string name="ForgotMyPassword">forgot password </string>
    <string name="Search">search </string>
    <string name="location"> location </string>
    <string name="date">date </string>

    //Angel
    <string name="PostHostingOffer">create new hosting offer </string>
    <string name="DeleteHostingOffer">delete </string>
    <string name="address">address  </string>
    <string name="capacity">capacity  </string>
    <string name="fromdate">start date  </string>
    <string name="todate">end date  </string>
    <string name="restrictions">restrictions and notes  </string>
    <string name="Contact">contact </string>
    <string name="phoneNum">phonNum </string>
    <string name="addOffer">offer</string>
    <string name="myOffer">my offer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //postShape
    <string name="invite">reserve</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    //reservation popup window
    <string name="enter_reservation">"enter num of reservations"</string>
    <string name="reserve">"reserve"</string>

    <string name="searchOfferHeadLine">"search for hosting offer"</string>
    <string name="edit_details">"edit_details"</string>
    <string name="edit">"Edit"</string>

    <string-array name="Type">
        <item>Angel</item>
        <item>Traveler</item>
    </string-array>

    //access token to mapbox

    <string name="access_token">"pk.eyJ1Ijoicml2a2Etc3RyaWxpdHMiLCJhIjoiY2t4aHhnM2hpMTgyazJwbnA1bWs4ODJ2MCJ9.pBy19NCGVQjbxKK0GShBRw"</string>


</resources>