<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".Register">
        <EditText
            android:id="@+id/registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4pt"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:hint="@string/Username"/>
        <EditText
            android:id="@+id/registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/registration_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/registration_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/phoneNum" />

        <Spinner
            android:id="@+id/registration_UserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10pt"
            android:layout_marginLeft="4pt"
            android:layout_marginRight="4pt"
            android:hint="@string/UserType"/>

        <Button
            android:id="@+id/registration_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4pt"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:text="@string/signUp"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>