<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!--        <EditText-->
        <!--            android:id="@+id/pTiteleEt"-->
        <!--            android:background="@drawable/editextstyle"-->
        <!--            android:padding="10dp"-->
        <!--            android:hint="Enter Title"-->
        <!--            android:singleLine="true"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"/>-->

        <ImageView
            android:id="@+id/pImageIv"
            android:background="@color/design_default_color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"/>

        <EditText
            android:id="@+id/post_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/post_fromDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:ems="10"
            android:hint="@string/fromdate"
            android:inputType="date" />

        <EditText
            android:id="@+id/post_toDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:ems="10"
            android:hint="@string/todate"
            android:inputType="date" />

        <EditText
            android:id="@+id/post_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/capacity" />

        <EditText
            android:id="@+id/post_restrictions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/restrictions" />


        <Button
            android:id="@+id/createOffer"
            android:layout_width="204dp"
            android:layout_height="51dp"
            android:text="@string/PostHostingOffer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.654"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862" />

        <Button
            android:id="@+id/deleteOffer"
            android:layout_width="198dp"
            android:layout_height="50dp"
            android:text="@string/DeleteHostingOffer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.638"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.954" />


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    </LinearLayout>

</ScrollView>