<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserDetailsActivity">


    <TextView
        android:id="@+id/headline_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bevan"
        android:hint="@string/edit_details"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        tools:layout_editor_absoluteX="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="406dp"
        android:layout_height="621dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".EditUserDetailsActivity"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">



        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/phoneNum" />

        <Spinner
            android:id="@+id/edit_UserType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/UserType" />

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:text="@string/edit" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>