<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Angel_homePage">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Angel_homePage"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">


        <EditText
            android:id="@+id/post_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/address" />

        <TextView
            android:id="@+id/post_fromDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:textSize="20sp"
            android:ems="10"
            android:hint="@string/fromdate"
            android:inputType="date" />

        <Button
            android:id="@+id/fromdatePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="01 01 2020"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_fromDate"
            android:onClick="openDatePicker"/>

        <TextView
            android:id="@+id/post_toDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/todate"
            android:inputType="date" />

        <Button
            android:id="@+id/todatePickerButton"
            style="?android:spinnerStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="01 01 2020"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_toDate"
            android:onClick="openDatePicker"/>

        <EditText
            android:id="@+id/post_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/capacity" />

        <EditText
            android:id="@+id/post_restrictions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/restrictions" />

        <EditText
            android:id="@+id/post_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4pt"
            android:layout_marginTop="10pt"
            android:layout_marginRight="4pt"
            android:hint="@string/phoneNum" />


        <Button
            android:id="@+id/createOffer"
            android:layout_width="204dp"
            android:layout_height="51dp"
            android:text="@string/PostHostingOffer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.654"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.862" />




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>