<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Traveler_homePage">


    <EditText
        android:id="@+id/TextWelcomeTraveler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="256dp"
        android:layout_height="42dp"
        android:rotationX="4"
        android:rotationY="-4"
        android:text="הכנס פרטים לחיפוש מלאך"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Traveler_location_input"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:hint="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <EditText
        android:id="@+id/Traveler_date_input"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:hint="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <Button
        android:id="@+id/search_for_angel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="528dp" />

</androidx.constraintlayout.widget.ConstraintLayout>